[gd_scene load_steps=2 format=2]

[ext_resource path="res://shake.gd" type="Script" id=1]

[node name="screenShake" type="Node2D" groups=[
"shake",
]]
script = ExtResource( 1 )

[node name="shakeTween" type="Tween" parent="."]

[node name="frequency" type="Timer" parent="."]

[node name="duration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="frequency" to="." method="_on_frequency_timeout"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
